[package]
name = "brightness"
version = "0.1.0"
edition = "2018"
authors = ["Pierre Bertet <hi@bpier.re>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
getopts = "0.2"
zbus = "2.0.0-beta.7"

[dependencies.async-std]
version = "1.10.0"
features = ["attributes"]
